[package]
name = "rustradio-ui"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/rustradio"
description = "Software defined radio library"
keywords = ["SDR", "radio"]

[dependencies]
log = { version = "0.4.30", features = ["serde"] }
num-complex = { version = "0.4.6", features = ["serde"] }
# rustradio = { version = "0.16.9", path = "..", features = ["wasm"] }
rustradio = { version = "0.16.9", features = ["wasm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.122"
