[package]
name = "rustradio-ui"
version = "0.1.15"
edition = "2024"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/rustradio"
description = "Software defined radio library"
keywords = ["SDR", "radio"]

[dependencies]
async-channel = { version = "2.5.0", default-features = false }
log = { version = "0.4.30", features = [
        "serde",
        "std", # For boxed logger.
] }
num-complex = { version = "0.4.6", features = ["serde"] }
rustradio = { version = "0.17.0", features = ["wasm"] }
rustradio_macros = "0.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.102", features = [
        "DedicatedWorkerGlobalScope",
        "Document",  # Any DOM ops.
        "console", # console logging.
        "HtmlCanvasElement", # Various visualizations.
        "MessageEvent", # lower level worker startup.
        "Worker",
        "WorkerType",
        "WorkerOptions",
] }

[dev-dependencies]
serde_json = "1.0.150"

[features]
audio = [
        "web-sys/AudioBuffer",
        "web-sys/AudioBufferSourceNode",
        "web-sys/AudioContext",
        "web-sys/AudioDestinationNode",
        "web-sys/AudioParam",
        "web-sys/GainNode",
]
