[package]
name = "rustradio_macros"
version = "0.9.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
description = "Software defined radio library"
repository = "https://github.com/ThomasHabets/rustradio"
keywords = ["SDR", "radio"]

[dependencies]
paste = "1.0.15"
proc-macro2 = "1.0.89"
#proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["extra-traits"]}

[lib]
proc-macro = true
