[package]
name = "rustradio_macros_code"
version = "0.1.0"
edition = "2024"
description = "Macro code for rustradio"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
repository = "https://github.com/ThomasHabets/rustradio"

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits"] }

[dev-dependencies]
rustradio = { path = ".." }
